--- a/public/index.css
+++ b/public/index.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     margin: 0;
-    background-color: #1ca6c8;
+    background-color: #0ca4ca;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1667' height='1667' viewBox='0 0 200 200'%3E%3Cg fill='none' stroke='%23fcf4a9' stroke-width='6.5' stroke-opacity='0.42'%3E%3Crect x='-40' y='40' width='75' height='75'/%3E%3Crect x='-35' y='45' width='65' height='65'/%3E%3Crect x='-30' y='50' width='55' height='55'/%3E%3Crect x='-25' y='55' width='45' height='45'/%3E%3Crect x='-20' y='60' width='35' height='35'/%3E%3Crect x='-15' y='65' width='25' height='25'/%3E%3Crect x='-10' y='70' width='15' height='15'/%3E%3Crect x='-5' y='75' width='5' height='5'/%3E%3Crect width='35' height='35'/%3E%3Crect x='5' y='5' width='25' height='25'/%3E%3Crect x='10' y='10' width='15' height='15'/%3E%3Crect x='15' y='15' width='5' height='5'/%3E%3Crect x='40' width='75' height='75'/%3E%3Crect x='45' y='5' width='65' height='65'/%3E%3Crect x='50' y='10' width='55' height='55'/%3E%3Crect x='55' y='15' width='45' height='45'/%3E%3Crect x='60' y='20' width='35' height='35'/%3E%3Crect x='65' y='25' width='25' height='25'/%3E%3Crect x='70' y='30' width='15' height='15'/%3E%3Crect x='75' y='35' width='5' height='5'/%3E%3Crect x='40' y='80' width='35' height='35'/%3E%3Crect x='45' y='85' width='25' height='25'/%3E%3Crect x='50' y='90' width='15' height='15'/%3E%3Crect x='55' y='95' width='5' height='5'/%3E%3Crect x='120' y='-40' width='75' height='75'/%3E%3Crect x='125' y='-35' width='65' height='65'/%3E%3Crect x='130' y='-30' width='55' height='55'/%3E%3Crect x='135' y='-25' width='45' height='45'/%3E%3Crect x='140' y='-20' width='35' height='35'/%3E%3Crect x='145' y='-15' width='25' height='25'/%3E%3Crect x='150' y='-10' width='15' height='15'/%3E%3Crect x='155' y='-5' width='5' height='5'/%3E%3Crect x='120' y='40' width='35' height='35'/%3E%3Crect x='125' y='45' width='25' height='25'/%3E%3Crect x='130' y='50' width='15' height='15'/%3E%3Crect x='135' y='55' width='5' height='5'/%3E%3Crect y='120' width='75' height='75'/%3E%3Crect x='5' y='125' width='65' height='65'/%3E%3Crect x='10' y='130' width='55' height='55'/%3E%3Crect x='15' y='135' width='45' height='45'/%3E%3Crect x='20' y='140' width='35' height='35'/%3E%3Crect x='25' y='145' width='25' height='25'/%3E%3Crect x='30' y='150' width='15' height='15'/%3E%3Crect x='35' y='155' width='5' height='5'/%3E%3Crect x='200' y='120' width='75' height='75'/%3E%3Crect x='40' y='200' width='75' height='75'/%3E%3Crect x='80' y='80' width='75' height='75'/%3E%3Crect x='85' y='85' width='65' height='65'/%3E%3Crect x='90' y='90' width='55' height='55'/%3E%3Crect x='95' y='95' width='45' height='45'/%3E%3Crect x='100' y='100' width='35' height='35'/%3E%3Crect x='105' y='105' width='25' height='25'/%3E%3Crect x='110' y='110' width='15' height='15'/%3E%3Crect x='115' y='115' width='5' height='5'/%3E%3Crect x='80' y='160' width='35' height='35'/%3E%3Crect x='85' y='165' width='25' height='25'/%3E%3Crect x='90' y='170' width='15' height='15'/%3E%3Crect x='95' y='175' width='5' height='5'/%3E%3Crect x='120' y='160' width='75' height='75'/%3E%3Crect x='125' y='165' width='65' height='65'/%3E%3Crect x='130' y='170' width='55' height='55'/%3E%3Crect x='135' y='175' width='45' height='45'/%3E%3Crect x='140' y='180' width='35' height='35'/%3E%3Crect x='145' y='185' width='25' height='25'/%3E%3Crect x='150' y='190' width='15' height='15'/%3E%3Crect x='155' y='195' width='5' height='5'/%3E%3Crect x='160' y='40' width='75' height='75'/%3E%3Crect x='165' y='45' width='65' height='65'/%3E%3Crect x='170' y='50' width='55' height='55'/%3E%3Crect x='175' y='55' width='45' height='45'/%3E%3Crect x='180' y='60' width='35' height='35'/%3E%3Crect x='185' y='65' width='25' height='25'/%3E%3Crect x='190' y='70' width='15' height='15'/%3E%3Crect x='195' y='75' width='5' height='5'/%3E%3Crect x='160' y='120' width='35' height='35'/%3E%3Crect x='165' y='125' width='25' height='25'/%3E%3Crect x='170' y='130' width='15' height='15'/%3E%3Crect x='175' y='135' width='5' height='5'/%3E%3Crect x='200' y='200' width='35' height='35'/%3E%3Crect x='200' width='35' height='35'/%3E%3Crect y='200' width='35' height='35'/%3E%3C/g%3E%3C/svg%3E");
     font-size: 1rem;
     height: 100vh;
@@ -24,7 +24,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2.5em;
+    font-size: 2.4em;
 }
 
 #home-button {
@@ -35,7 +35,8 @@ body {
 #top {
     text-align: center;
     color: #293d46;
-    text-shadow: 1px 2px #063246;
+    text-shadow: 3px 3px #0632465b;
+    font-weight: 900;
 }
 
 #mainWrapper {
@@ -56,7 +57,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 0px;
     height: 150px;
     width: 97.5;
@@ -65,8 +66,13 @@ body {
     overflow: scroll;
 }
 
+#category {
+    font-size: 1.3em;
+    color: #548aa3;
+}
+
 #display>a:nth-child(even) {
-    color: #848e94;
+    color: #548aa3;
 }
 
 #display>a:nth-child(odd) {
@@ -88,6 +94,8 @@ body {
     text-align: center;
     border-radius: 5%;
     box-shadow: none;
+    background-color: #f7e759f5;
+    border-radius: 10%;
 }
 
 @keyframes fade-in {
@@ -172,14 +180,15 @@ body {
 }
 
 #restDisplay>div:nth-child(odd) {
-    color: #293d46;
-}
-
-#restDisplay>div:nth-child(even) {
     color: #222324;
 }
 
+#restDisplay>div:nth-child(even) {
+    color: #548aa3;
+}
+
 #address {
+    font-weight: 700;
     padding-top: 5px;
 }
 
@@ -190,20 +199,30 @@ body {
 
 #comment-box {
     resize: none;
+    background-color: #eff0fe;
+    text-align: center;
+    border-radius:5%;
 }
 
 .comments {
-    margin: 1px;
+    margin: 3px;
+    color: #548aa3;
 }
 
 .info {
-    font-size: 1em;
+    font-size: .8em;
+    padding: 2px;
 }
 
 #comment-header {
     padding: 15px;
     padding-bottom: 5px;
     font-weight: 700;
+}
+
+#submit-button {
+    background-color: #f7e759f5;
+    border-radius: 10%;
 }
 
 #restMap {
