--- a/public/index.css
+++ b/public/index.css
@@ -2,10 +2,9 @@
     text-decoration: none;
 }
 
+/* Basis page styling (mobile-first) */
+
 body {
-    font-family: 'Libre Baskerville', serif;
-    font-family: 'Fira Sans', sans-serif;
-    font-family: 'Playfair Display', serif;
     font-family: 'Quicksand', sans-serif;
     display: flex;
     flex-direction: column;
@@ -27,10 +26,7 @@ body {
     font-size: 2.4em;
 }
 
-#home-button {
-    justify-self: flex-start;
-    padding: 5px;
-}
+/* better-named "title" */
 
 #top {
     text-align: center;
@@ -38,6 +34,8 @@ body {
     text-shadow: 3px 3px #0632465b;
     font-weight: 900;
 }
+
+/* wraps map and display: main body */
 
 #mainWrapper {
     display: flex;
@@ -67,6 +65,8 @@ body {
     overflow-x: hidden;
 }
 
+/* information within display */
+
 #category {
     font-size: 1.3em;
     color: #548aa3;
@@ -90,6 +90,8 @@ body {
     font-size: 1.3em;
 }
 
+/* "learn more" icon */
+
 #bottom-of-display {
     font-size: 1.1rem;
     color: #427186;
@@ -109,6 +111,8 @@ body {
     }
 }
 
+/* AKA footer wrapper */
+
 #bottom {
     display: flex;
     justify-content: center;
@@ -122,6 +126,8 @@ body {
 .hover-class:hover {
     transform: scale(1.1)
 }
+
+/* search bar and go button */
 
 #searchBar {
     height: 5vh;
@@ -142,6 +148,8 @@ body {
     border-radius: 10%;
     transition: all .3s ease-out
 }
+
+/* footer, contains icons */
 
 #footer {
     display: flex;
@@ -166,6 +174,8 @@ body {
 }
 
 /* Restaurant page */
+
+/* stylizing display, alternating children and different sections */
 
 #restDisplay {
     text-align: center;
@@ -213,15 +223,18 @@ body {
 }
 
 .info {
-    font-size: .8em;
+    font-size: .85em;
     padding: 2px;
 }
 
 #notes {
-    background-image: linear-gradient(#faf2a8f5, #f7e75985, #faf2a8f5)
+    background-color: #f8ed8a85;
+    font-size: .75em;
+    padding:10px;
 }
 
 #comment-header {
+    color: #548aa3;
     padding: 15px;
     padding-bottom: 5px;
     font-weight: 700;
@@ -238,6 +251,8 @@ body {
 }
 
 /* simple media query, for desktop formatting */
+
+/* left room on sides for "ad space"? */
 
 @media only screen and (min-width:550px) {
     #bottom {
